ansible/roles/kubernetes_cluster/files/default_policy.yml
---
apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: default-deny-but-dns
spec:
  namespaceSelector: has(projectcalico.org/name) && projectcalico.org/name not in {"kube-system", "calico-system", "calico-apiserver"}
  types:
  - Ingress
  - Egress
  egress:
  - action: Allow
    protocol: UDP
    destination:
      selector: k8s-app == "kube-dns"
      ports:
      - 53
  - action: Allow
    protocol: TCP
    destination:
      selector: k8s-app == "kube-dns"
      ports:
      - 53
---
apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: kubernetes-host-policy
spec:
  selector: has(kubernetes-host)
  types:
  - Ingress
  - Egress
  ingress:
  - action: Allow
    protocol: TCP
    destination:
      selector: has(kubernetes-host)
      ports:
      - 22
      - 2379
      - 2380
      - 6443
      - 10250
      - 10257
      - 10259
  egress:
  - action: Allow
    source:
      selector: has(kubernetes-host)
